--- a/wcivf/apps/people/templates/people/includes/_person_manifesto_card.html
+++ b/wcivf/apps/people/templates/people/includes/_person_manifesto_card.html
@@ -23,6 +23,25 @@
                     {% for manifesto in object.manifestos %}
                         {% include "parties/single_manifesto.html" %}
                     {% endfor %}
+                    {% if object.has_additional_manifesto %}
+                        <li>
+                            {% if object.featured_candidacy.party_name == "Labour Party" %}
+                                {% blocktrans trimmed with party=party.party_name %}
+                                    The {{ party }} have also released a <a href="">manifesto for Scotland</a>.
+                                {% endblocktrans %}
+                            {% endif %}
+                            {% if object.featured_candidacy.party_name == "Conservative Party" %}
+                                {% blocktrans trimmed with party=party.party_name %}
+                                    The {{ party }} have also released a <a href="">manifesto for Scotland</a>.
+                                {% endblocktrans %}
+                            {% endif %}
+                            {% if object.featured_candidacy.party_name == "Liberal Democrat Party"  %}
+                                {% blocktrans trimmed with party=party.party_name %}
+                                    The {{ party }} have also released a <a href="">manifesto for Scotland</a>.
+                                {% endblocktrans %}
+                            {% endif %}
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
             {% if party.emblem_url %}
